test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/setlike-2types.widl
interface SetLikeTwoTypes {
  setlike<long, long>;
}